syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";

service PersistenceService {
  rpc Persist (PersistRequest) returns (PersistResponse) {}
}

message PersistRequest {
  string name = 1;
}

message PersistResponse {
  uint64 count = 1;
}